# sumov2

./: sumo.doxyconf
TestMaps/: eredmenyosszes.ods  judge  judges  (+7 more)
src/microsim/devices/: CMakeLists.txt  MSDevice.cpp  MSDevice_SAL.cpp  MSDevice_SAL.h
src/microsim/devices/GroupingSystem/: Group.cpp  Group.h
src/microsim/devices/Judge/: AbstractJudge.cpp  AbstractJudge.h  ConflictClass.cpp  ConflictClass.h  ECNConflictClass.cpp  ECNConflictClass.h  ECNJudge.cpp  ECNJudge.h  JudgeSystem.cpp  JudgeSystem.h  MDDFConflictClass.cpp  MDDFConflictClass.h  MDDFJudge.cpp  MDDFJudge.h  RRJudge.cpp  RRJudge.h
src/microsim/devices/Judge/LPSolver/: CMakeLists.txt  LPSolver.cpp  LPSolver.h
src/microsim/devices/Judge/LPSolver/ortools/examples/dotnet/: CpIsFunSat.csproj  LiteralSampleSat.csproj  OptionalIntervalSampleSat.csproj  RankingSampleSat.csproj  SearchForAllSolutionsSampleSat.csproj  SimpleLpProgram.csproj  SimpleRoutingProgram.csproj  SimpleSatProgram.csproj  SolveAndPrintIntermediateSolutionsSampleSat.csproj  StepFunctionSampleSat.csproj  StopAfterNSolutionsSampleSat.csproj  Tsp.csproj  TspDistanceMatrix.csproj  Vrp.csproj  VrpCapacity.csproj  VrpGlobalSpan.csproj  VrpPickupDelivery.csproj  VrpPickupDeliveryFifo.csproj  VrpTimeWindows.csproj  VrpWithTimeLimit.csproj
src/microsim/devices/Judge/LPSolver/ortools/include/ortools/bop/: bop_parameters.pb.h
src/microsim/devices/Judge/LPSolver/ortools/include/ortools/constraint_solver/: assignment.pb.h  demon_profiler.pb.h  routing_enums.pb.h  routing_parameters.pb.h  search_limit.pb.h  solver_parameters.pb.h
src/microsim/devices/Judge/LPSolver/ortools/include/ortools/data/: jobshop_scheduling.pb.h  rcpsp.pb.h
src/microsim/devices/Judge/LPSolver/ortools/include/ortools/glop/: parameters.pb.h
src/microsim/devices/Judge/LPSolver/ortools/lib/: libCbcSolver.so.3.10.3  libClpSolver.so.1.14.3  libprotobuf-lite.so.3.9.0.0
src/microsim/devices/MarkerSystem/: BaseMarker.cpp  BaseMarker.h  EntryMarker.cpp  EntryMarker.h  ExitMarker.cpp  ExitMarker.h  MarkerSystem.cpp  MarkerSystem.h
src/microsim/devices/MessagingSystem/: MessagingProxy.cpp  MessagingProxy.h  Messenger.cpp  Messenger.h  MessengerSystem.cpp  MessengerSystem.h
src/microsim/devices/Others/: Helper.cpp  Helper.h  LCManager.cpp  LCManager.h
(+101 files in other folders)
